--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+//    Okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+
 //    Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
